# OBS-Metaballs-source

./: .gitignore  CMakeLists.txt
data/: metaball.effect
plugin/: CMakeLists.txt  plugin.c  plugin.h
